--- a/microdonate/templates/microdonate/detailVol.html
+++ b/microdonate/templates/microdonate/detailVol.html
@@ -23,6 +23,7 @@
     </div>
     <div class = "row">
         <form action="{% url 'signup' op.id %}" method="POST">
+            {% csrf_token %}
             <button type="submit"> Sign Up! </button>
         </form>
     </div>
